<resources>
    <string name="app_name">PrivateInstructor</string>
    <string name="title_activity_index">IndexActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--PREFERENCES-->
    <string name="shared_preferences">PrivateInstructorSharedPreferences</string>
    <string name="pref_course_beginning">pref_course_beginning</string>
    <string name="pref_course_end">pref_course_end</string>
    <string name="pref_enable_firebase_synchronization">pref_enable_firebase_synchronization</string>
    <string name="pref_enable_firebase_snapshot">pref_enable_firebase_snapshot</string>
    <string name="pref_firebase_snapshot_frequency">pref_firebase_snapshot_frequency</string>
    <string name="pref_user_mail">pref_user_mail</string>
    <string name="pref_user_location">pref_user_location</string>

    <string name="action_save">Enregistrer</string>
    <string name="action_cancel">Annuler</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Supprimer</string>
    <string name="action_edit">Modifier</string>
    <string name="action_comment">Commenter</string>

    <!--Dialog-->
    <string name="dialog_delete_pupil">"En supprimant cet élève, tous ses cours et ses devoirs seront perdus. Souhaitez-vous vraiment supprimer cet élève ?"</string>
    <string name="dialog_delete_course">"Souhaitez-vous vraiment supprimer ce cours ?"</string>
    <string name="dialog_delete_devoir">"Souhaitez-vous vraiment supprimer ce devoir ?"</string>
    <string name="dialog_update_database">"En changeant la base de données courantes, les données actuelles seront perdues. \nSouhaitez-vous faire une copie de votre base avant cette opération ?"</string>


    <string name="unknown_date">Unknown date</string>
    <string name="unknown_hour">Unknown hour</string>

    <string-array name="event_states">
        <item>À venir</item>
        <item>Validé</item>
        <item>En attente de validation</item>
        <item>Annulé</item>
    </string-array>

    <string-array name="course_states">
        <item>À venir</item>
        <item>Validé</item>
        <item>En attente de validation</item>
        <item>Annulé</item>
    </string-array>

    <string-array name="devoir_types">
        <item>DST</item>
        <item>DM</item>
        <item>Interrogation</item>
    </string-array>


    <string-array name="pupil_class_levels">
        <item>Sixième</item>
        <item>Cinquième</item>
        <item>Quatrième</item>
        <item>Troisième</item>
        <item>Seconde</item>
        <item>Première</item>
        <item>Terminale</item>
    </string-array>

    <string-array name="pupil_course_frequency">
        <item>Régulier</item>
        <item>Occasionnel</item>
        <item>Temporaire</item>
    </string-array>

    <string-array name="pupil_payment_type">
        <item>Agence</item>
        <item>Black</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>

</resources>
