<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/vertical_lv_margin">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/vertical_lv_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Notifications"
                android:textStyle="bold"
                android:textColor="@color/themPrimaryDark"/>

            <com.antoineriche.privateinstructor.customviews.SwitchPreferences
                android:id="@+id/swipref_course_beginning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:preferencesLabel="Début de cours"
                app:preferencesDescription="Recevoir une notification dix minutes avant le début de vos cours."
                app:preferences_key="@string/pref_course_beginning"/>

            <com.antoineriche.privateinstructor.customviews.SwitchPreferences
                android:id="@+id/swipref_course_end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:preferencesLabel="Fin de cours"
                app:preferencesDescription="Recevoir une notification dix minutes apres la fin de vos cours vous permettant de les compléter."
                app:preferences_key="@string/pref_course_end"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/vertical_lv_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/vertical_lv_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Synchronisation"
                android:textStyle="bold"
                android:textColor="@color/themPrimaryDark"/>

            <com.antoineriche.privateinstructor.customviews.SwitchPreferences
                android:id="@+id/swipref_enable_firebase_synchronization"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:preferencesLabel="Autoriser la synchronisation sur Firebase"
                app:preferencesDescription="Garder les données à jour sur tous vos appareils."
                app:preferences_key="@string/pref_enable_firebase_synchronization"/>

            <com.antoineriche.privateinstructor.customviews.SwitchPreferences
                android:id="@+id/swipref_enable_firebase_snapshots"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:preferencesLabel="Autoriser les snapshots sur Firebase"
                app:preferencesDescription="Sauvegarder une copie de vos données une fois par semaine. Vous pouvez revenir à vos données antérieures depuis l'onglet 'Snapshots'."
                app:preferences_key="@string/pref_enable_firebase_snapshot"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Fréquence de synchronisation"
                android:textColor="@color/black"
                android:visibility="gone"/>

            <RadioGroup
                android:id="@+id/rg_sync_freq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <RadioButton
                    android:id="@+id/rb_sync_daily"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:text="Quotidienne"/>

                <RadioButton
                    android:id="@+id/rb_sync_weekly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Hebdomadaire"/>

                <RadioButton
                    android:id="@+id/rb_sync_monthly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Mensuelle"/>

            </RadioGroup>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/vertical_lv_margin"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Base de données"
                    android:textStyle="bold"
                    android:textColor="@color/themPrimaryDark"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_toStartOf="@+id/pb_getting_snapshot_dates"/>

                <ProgressBar
                    android:id="@+id/pb_getting_snapshot_dates"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:visibility="visible"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"/>

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="Dernier snapshot"
                    android:layout_alignParentStart="true"
                    android:labelFor="@+id/tv_course_last_snapshot"
                    android:ellipsize="end"
                    android:layout_toStartOf="@+id/tv_course_last_snapshot"/>

                <TextView
                    android:id="@+id/tv_course_last_snapshot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_alignParentEnd="true"
                    android:ellipsize="end"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="Cours à ajouter"
                    android:layout_alignParentStart="true"
                    android:labelFor="@+id/tv_course_to_add_count"
                    android:ellipsize="end"
                    android:layout_toStartOf="@+id/tv_course_to_add_count"/>

                <TextView
                    android:id="@+id/tv_course_to_add_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="0"
                    android:layout_alignParentEnd="true"
                    android:ellipsize="end"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="Cours à supprimer"
                    android:layout_alignParentStart="true"
                    android:labelFor="@+id/tv_course_to_remove_count"
                    android:ellipsize="end"
                    android:layout_toStartOf="@+id/tv_course_to_remove_count"/>

                <TextView
                    android:id="@+id/tv_course_to_remove_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="0"
                    android:layout_alignParentEnd="true"
                    android:ellipsize="end"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="Cours à mettre à jour"
                    android:layout_alignParentStart="true"
                    android:labelFor="@+id/tv_course_to_update_count"
                    android:ellipsize="end"
                    android:layout_toStartOf="@+id/tv_course_to_update_count"/>

                <TextView
                    android:id="@+id/tv_course_to_update_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="0"
                    android:layout_alignParentEnd="true"
                    android:ellipsize="end"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_synchronization_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/btn_firebase_save"
                    android:ellipsize="marquee"
                    android:maxLines="2"/>

                <Button
                    android:id="@+id/btn_firebase_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="Sync"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/vertical_lv_margin"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_firebase_retrieve"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="Check sync. state"/>

            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/btn_create_snapshot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Create Snapshot"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btn_import_courses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Import Courses"
        android:visibility="gone"/>

</LinearLayout>

